--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
       "url": "http://www.apache.org/licenses/LICENSE-2.0"
     }
   ],
+  "bin" : {},
   "scripts": {
     "prepublish": "make prepublish",
     "test": "make test"
@@ -28,5 +29,8 @@
     "lodash": "~1.3.1",
     "mocha": "~1.11.0",
     "testem": "~0.2.98"
+  },
+  "publishConfig": {
+    "bin": {}
   }
 }
