testem should watch test folder too

--- a/testem.yml
+++ b/testem.yml
@@ -3,6 +3,7 @@ src_files:
 - "./*.coffee"
 - "./bin/*.coffee"
 - "./src/**/*.coffee"
+- "./test/**/*.coffee"
 launchers:
   Mocha:
     command: mocha test
