--- a/package.json
+++ b/package.json
@@ -17,15 +17,16 @@
     "test": "make test"
   },
   "dependencies": {},
-  "optionalDependencies": {},
+  "optionalDependencies": {
+    "coffee-script": "~1.6.3"
+  },
   "devDependencies": {
-    "chai": "~1.7.0",
-    "coffee-script": "~1.6.3",
+    "chai": "~1.7.2",
     "coffeelint": "~0.5.6",
     "growl": "~1.7.0",
     "lodash": "~1.3.1",
-    "mocha": "~1.11.0",
-    "testem": "~0.2.98"
+    "mocha": "~1.12.0",
+    "testem": "~0.3.18"
   },
   "publishConfig": {
     "bin": {},
